sumo/tests/sumo/errors/wauts/cross3ltl_error_missing_junctiondef/errors.sumo
Warning: Vehicle 'vertical1' will be teleported; edge '3si', simulation time 349.
Warning: Vehicle 'vertical2' will be teleported; edge '4si', simulation time 349.
Warning: Vehicle 'vertical1' ends teleporting on edge '4o', simulation time 349.
Warning: Vehicle 'vertical2' ends teleporting on edge '3o', simulation time 349.
